work on games list

--- a/frames/gamecatalog/hives/listing/actions/home/home_config.json
+++ b/frames/gamecatalog/hives/listing/actions/home/home_config.json
@@ -1,42 +1,26 @@
 {
     "static": {
-        "js": "/js/home"
+        "js": "/js/home",
+        "css": "/css/home"
     },
     "javascript": [
-
-        {
-            "url": "/js/home/rest.js",
-            "name": "rest",
-            "defer": true,
-            "context": "foot"
-
-        },
-
-        {
-            "url": "/js/home/giantbomb.js",
-            "name": "giantbomb",
-            "defer": true,
-            "context": "foot",
-            "requires": ["rest", "lodash"]
-
-        },
-
         {
             "url": "/js/home/vendor/lodash.js",
-            "name": "lodash",
-            "defer": true,
-            "context": "foot"
-
-        },
-
-        {
-            "url": "/js/home/home.js",
-            "name": "home_main",
-            "defer": true,
-            "context": "foot",
-            "requires": ["giantbomb"]
+            "context": "head"
         }
-
+    ],
+    "css": [
+        {
+            "url": "/css/home/famous.css",
+            "name": "famous",
+            "context": "head"
+        },
+        {
+            "url": "/css/home/home.css",
+            "name": "home",
+            "context": "head",
+            "requires": ["famous"]
+        }
     ],
     "routes": {
         "get": "/"
