first run of platform grid

--- a/frames/gamecatalog/hives/listing/actions/home/home_config.json
+++ b/frames/gamecatalog/hives/listing/actions/home/home_config.json
@@ -7,6 +7,10 @@
         {
             "url": "/js/home/vendor/lodash.js",
             "context": "head"
+        },
+        {
+            "url": "/js/home/vendor/moment.min.js",
+            "context": "head"
         }
     ],
     "css": [
