adding intro panel

--- a/frames/gamecatalog/hives/listing/actions/home/home_config.json
+++ b/frames/gamecatalog/hives/listing/actions/home/home_config.json
@@ -2,7 +2,8 @@
     "static": {
         "js": "/js/home",
         "css": "/css/home",
-        "img": "/img/home"
+        "img": "/img/home",
+        "template": "/template/home"
     },
     "javascript": [
         {
