--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "an explorer for game development",
   "main": "web.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node web.js"
   },
   "author": "Dave Edelhart",
   "license": "BSD-2-Clause",
